/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.apache.tajo.ipc";
option java_outer_classname = "ClientProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "tajo_protos.proto";
import "TajoIdProtos.proto";
import "CatalogProtos.proto";
import "PrimitiveProtos.proto";

enum ResultCode {
  OK = 0;
  ERROR = 1;
}

message UpdateSessionVariableRequest {
  optional SessionIdProto sessionId = 1;
  repeated KeyValueProto setVariables = 2;
  repeated string unsetVariables = 3;
}

message QueryRequest {
  optional SessionIdProto sessionId = 1;
  required string query = 2;
  repeated KeyValueProto setVariables = 3;
}

message UpdateQueryResponse {
  required ResultCode resultCode = 1;
  optional string errorMessage = 2;
}

message SubmitQueryResponse {
  required ResultCode resultCode = 1;
  optional QueryIdProto queryId = 2;
  optional string errorMessage = 3;
}

message GetQueryResultRequest {
  optional SessionIdProto sessionId = 1;
  required QueryIdProto queryId = 2;
}

message GetQueryResultResponse {
  optional TableDescProto tableDesc = 1;
  optional string errorMessage = 2;
  required string tajoUserName = 3;
}

message GetQueryListRequest {
  optional SessionIdProto sessionId = 1;
}

message BriefQueryStatus {
  required QueryIdProto queryId = 1;
  required QueryState state = 2;
  required int32 executionTime = 3;
}

message GetQueryListResponse {
  repeated BriefQueryStatus queryList = 1;
}

message GetQueryStatusRequest {
  optional SessionIdProto sessionId = 1;
  required QueryIdProto queryId = 2;
}

message GetQueryStatusResponse {
  required ResultCode resultCode = 1;
  required QueryIdProto queryId = 2;
  optional QueryState state = 3;
  optional float progress = 4;
  optional int64 submitTime = 5;
  optional int64 finishTime = 7;
  optional bool hasResult = 8;
  optional string errorMessage = 9;
  optional string queryMasterHost = 10;
  optional int32 queryMasterPort = 11;
}

message GetClusterInfoRequest {
  optional SessionIdProto sessionId = 1;
}

message GetClusterInfoResponse {
  repeated string serverName = 1;
}

message GetTableListRequest {
  optional SessionIdProto sessionId = 1;
}

message GetTableListResponse {
  repeated string tables = 1;
}

message GetTableDescRequest {
  optional SessionIdProto sessionId = 1;
  required string tableName = 2;
}

message CreateTableRequest {
  required string name = 1;
  required SchemaProto schema = 2;
  required TableProto meta = 3;
  required string path = 4;
  optional PartitionDescProto partitions = 5;
}

message DropTableRequest {
  required string name = 1;
  optional bool purge = 2 [default = false];
}

message TableResponse {
  required ResultCode resultCode = 1;
  optional TableDescProto tableDesc = 2;
  optional string errorMessage = 3;
}
